# origin

./: .gitignore
Lesson1/task1/: task1.sln
Lesson1/task1/task1/: FileName.cpp  task1.vcxproj
Lesson1/task2/Task2/: Task2.sln
Lesson1/task3/task3/: task3.sln
Lesson10/CMakeProj/: CMakeLists.txt
Lesson10/CMakeProj/Client/: CMakeLists.txt  Client.cpp  Client.vcxproj
Lesson10/CMakeProj/Client/Debug/: vc143.idb
Lesson10/CMakeProj/Client/Debug/Client.tlog/: Client.lastbuildstate
Lesson10/CMakeProj/Client/x64/Debug/: vc143.idb
Lesson10/CMakeProj/Client/x64/Debug/Client.tlog/: Client.lastbuildstate
Lesson10/CMakeProj/LeaverLib/: CMakeLists.txt  Leaver.cpp  LeaverLib.vcxproj
Lesson10/Goodbye_class/: Goodbye_class.sln
Lesson10/Goodbye_class/Goodbye/: Goodbye.vcxproj  Goodbye.vcxproj.filters  goodbye_class.cpp  goodbye_class.h
Lesson10/Goodbye_class/goodbye_client/: goodbye_client.cpp  goodbye_client.vcxproj  goodbye_client.vcxproj.filters
Lesson10/Hello_user/: Hello_user.sln
Lesson10/Hello_user/Hello_class/: Class_hello.cpp  Class_hello.h  Hello_class.vcxproj  (+1 more)
Lesson2/task2/: task2.sln
Lesson3/Task1/: Task1.sln
Lesson3/Task2/: Task2.sln
Lesson4/Task1/: Task1.sln
Lesson4/Task2/: Task2.sln
Lesson4/Task3/: Task3.sln
Lesson5/Task1/: Task1.sln
Lesson5/Task2/: Task2.sln
Lesson5/Task3/: Task3.sln
Lesson6/Task1/: Task1.sln
Lesson6/Task2/: Task2.sln
Lesson7/Task1/: Task1.sln
Lesson8/Task1/: Task1.sln
Lesson8/Task2/: Task2.sln
Lesson9/: CMakeLists.txt
Lesson9/Task1/: source.cpp
Race simulator/Race/: Race.sln
(+391 files in other folders)
